--- a/post_bak.hbs
+++ b/post_bak.hbs
@@ -5,7 +5,8 @@
 <main id="content" role="main">
     <div class="loop">
         <div class="swiper-container">
-            
+            <div class="next"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.49 31.49" width="512" height="512"><path d="M21.205 5.007c-.429-.444-1.143-.444-1.587 0-.429.429-.429 1.143 0 1.571l8.047 8.047H1.111C.492 14.626 0 15.118 0 15.737c0 .619.492 1.127 1.111 1.127h26.554l-8.047 8.032c-.429.444-.429 1.159 0 1.587.444.444 1.159.444 1.587 0l9.952-9.952c.444-.429.444-1.143 0-1.571l-9.952-9.953z" fill="#FFF"/></svg></a></div>
+            <div class="prev"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.494 31.494" width="512" height="512"><path d="M10.273 5.009c.444-.444 1.143-.444 1.587 0 .429.429.429 1.143 0 1.571l-8.047 8.047h26.554c.619 0 1.127.492 1.127 1.111s-.508 1.127-1.127 1.127H3.813l8.047 8.032c.429.444.429 1.159 0 1.587-.444.444-1.143.444-1.587 0L.321 16.532c-.429-.429-.429-1.143 0-1.571l9.952-9.952z" fill="#FFF"/></svg></a></div>
             <div class="swiper-wrapper">
                 {{#post}}
                     <div class="swiper-slide" data-history="{{slug}}">
@@ -14,7 +15,7 @@
                                 <div class="col-md-12 post-cover-container">
                                     <time class="post-date" datetime="{{date format="YYYY-MM-DD"}}">{{reading_time}}</time>
                                     <div class="post-cover post-meta {{#if feature_image}}has-image{{/if}}">
-                                        <div class="pagination-number" style="display:none"></div>
+                                        <div class="pagination-number"></div>
                                         <h1 class="post-title col-lg-8 col-sm-10 offset-sm-1 offset-lg-2">{{title}}</h1>
                                         {{#if tags}}
                                                 <ul class="tags">
@@ -29,7 +30,7 @@
                                         {{#if feature_image}}
                                         <div class="cloned-content">
                                             <div class="img-holder" style="background-image: url({{img_url feature_image}})"></div>
-                                            <div class="pagination-number" style="display:none"></div>
+                                            <div class="pagination-number"></div>
                                             <span class="post-title col-lg-8 col-sm-10 offset-sm-1 offset-lg-2">{{title}}</span>
                                             {{#if tags}}
                                                 <ul class="tags">
