update: footer links

--- a/partials/theme_footer.hbs
+++ b/partials/theme_footer.hbs
@@ -8,10 +8,10 @@
                         <div class="footer-menu col-md-3 col-sm-6 col-xs-6">
                             <h3>ABOUT</h3>
                             <ul>
-                                <li><a href="/tools/">Tools</a></li>
-                                <li><a href="/deals/">Deals</a></li>
-                                <li><a href="/market/" target="_blank">Market</a></li>
-                                <li><a href="/resources/">Resources</a></li>
+                                <li><a href="/pricing/#faq">FAQ</a></li>
+                                <li><a href="/pricing/">Pricing</a></li>
+                                <li><a href="/support/">Support</a></li>
+                                <li><a href="https://trello.com/b/IzDWOoE0/roadmap">Roadmap</a></li>
                             </ul>
                         </div>
                         <div class="footer-menu col-md-3 col-sm-6 col-xs-6">
@@ -19,8 +19,8 @@
                             <ul>
                                 <li><a href="/tools/">Tools</a></li>
                                 <li><a href="/deals/">Deals</a></li>
-                                <li><a href="/market/" target="_blank">Market</a></li>
-                                <li><a href="/resources/">HackBook</a></li>
+                                <li><a href="/market/">Market</a></li>
+                                <li><a href="/resources/">Resources</a></li>
                             </ul>
                         </div>
                         <div class="footer-cta col-md-6 col-sm-12">     
